@@ -1,11 +1,14 @@
 ##-*- mode: org -*-
 
 * Very *Urgent*
+** DONE 0-dim sparseMatrices fail for all "Ops" --> ~/R/MM/Pkg-ex/Matrix/bug-0-length-Ops.R
 ** DONE as(m, "sparseMatrix") must work when length(m) > max.int for 'matrix' m
  -->  see SM (3e6 x 1023) ex. in tests/Simple.R
 ** TODO Using "long vectors" (i.e. 64 bit indices vectors) in CHOLMOD --> cholmod_l_*()
 *** e.g. segfault in crossprod() Csparse_crossprod -> cholmod_att()
 * *Urgent* in some sense ---------------------------------------------------
+** TODO Embarrasing print() / show() bug for small options(max.print=<n>):
+    --> tests/Simple.R {'max.print'}
 ** DONE qr.coef() has *wrong* (column)names, even in full-rank case: see man/qr-methods.Rd ("FIXME"); maybe related to
 ** DONE qr.R(), qrR() etc have *wrong* currently *lose* column/row names {compared to base R's qr.R}, see,
    	drop0(R. <- qr.R(qx), tol=1e-15) # columns are int b1 c1 c2 b2 c3 {in man/qr-methods.Rd}
@@ -213,9 +216,9 @@ alternatively also is_sym() [in src/cs_utils.c], see below.
   directly; in particular, the triangular* "class property" is lost!
   [current ??]
 
-** TODO The "[<-" now uses  src/t_Csparse_subassign.c and no longer explodes
-  memory.  *However* it is still too slow when the replacment region is large.
-
+** TODO "[<-" now uses src/t_Csparse_subassign.c (no memory explosion). *However* it's still too slow
+   when the replacement region is large, or also when do many millions of
+   one-element assignments (say in a 100'000^2 Matrix).
 * Cholesky(), chol() etc ---------------------------------------------------
 ** chol() should ``work'': proper result or "good" error message.
   (mostly done ?)
